--- a/group.html
+++ b/group.html
@@ -80,8 +80,8 @@ Dr. rer. nat. in Computer Science, TU Munich, Germany</br>
 <b>博士研究生 Ph.D. Student</b></br>
 南开大学计算机科学与技术专业工学硕士</br>
 M. Eng. in Computer Science and Technology, Nankai University, China</br>
-邮箱（email）: meiqit(at)*</br>
-<a href="./group.html" target="blank"> 个人主页（personal webpage)</a>
+邮箱（email）: mtian837(at)connect.*</br>
+<a href="https://mqtian7.github.io/" target="blank"> 个人主页（personal webpage)</a>
 </p>
 </div>
 </div>
@@ -95,7 +95,7 @@ M. Eng. in Computer Science and Technology, Nankai University, China</br>
 <b>博士研究生 Ph.D. Student</b></br>
 西北工业大学控制科学与工程专业工学硕士</br>
 M. Eng. in Control Science and Engineering, Northwestern Poly. University, China</br>
-邮箱（email）: tengw(at)*</br>
+邮箱（email）: twang560(at)connect*</br>
 <a href="./group.html" target="blank"> 个人主页（personal webpage)</a>
 </p>
 </div>
@@ -151,7 +151,7 @@ M. Sc. in Electrical Engineering, National University of Singapore, Singapore</b
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on August 27<sup>th</sup> 2024 . </br>
+Last edited  on September 19<sup>th</sup> 2024 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
