--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Please check <a href="./Recruitment.html" target=&ldquo;blank&rdquo;>here</a> fo
 <div id="text-img-container"><div id="img-container">
 <img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="175px" height="175px" /></div>
 <div id="text-container"><h2>Bingzhuo Zhong, Dr. rer. nat. (钟秉灼)<br /><br /></h2>
-<h3><b>Assistant Professor</b> at the <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>Thrust of Aritificial Intelligence</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>Information Hub</a>, <a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a></h3>
+<h3><b>Assistant Professor</b> at the <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>Thrust of Artificial Intelligence</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>Information Hub</a>, <a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a></h3>
 <h3>Office: W4(C8) L3 305</h3>
 <h3>Email: bingzhuoz(at)hkust-gz(dot)edu(dot)cn<br /></h3>
 </div></div>
@@ -87,7 +87,7 @@ Please check <a href="./Recruitment.html" target=&ldquo;blank&rdquo;>here</a> fo
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on August 27<sup>th</sup> 2024 . </br>
+Last edited  on September 19<sup>th</sup> 2024 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
