--- a/bingzhuo/index.html
+++ b/bingzhuo/index.html
@@ -63,7 +63,7 @@ MathJax.Hub.Config({
 <div id="text-container"><h1><br /></h1>
 <h1>Bingzhuo Zhong, Dr. rer. nat. (钟秉灼)<br /></h1>
 <h2>Assistant Professor <br /><br /></h2>
-<p>The Thrust of Aritificial Intelligence, Information Hub, <a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a></p>
+<p>The Thrust of Artificial Intelligence, Information Hub, <a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a></p>
 <p>Here are my profiles on <a href="https://scholar.google.com/citations?user=_5kYTtsAAAAJ&amp;hl=en/" target=&ldquo;blank&rdquo;>Google Scholar</a>, <a href="https://www.researchgate.net/profile/Bingzhuo-Zhong/" target=&ldquo;blank&rdquo;>Research Gate</a>, and <a href="https://www.linkedin.com/in/bingzhuo-zhong-32b94874/" target=&ldquo;blank&rdquo;>LinkedIn</a>.<br /></p>
 </div></div>
 <p>Please check <a href="./../Recruitment.html" target=&ldquo;blank&rdquo;>here</a> for details of recruitment.</p>
@@ -99,7 +99,7 @@ October 2016 - October 2018</p>
 </ul>
 <h2>Biography</h2>
 <ul>
-<li><p>Assistant Professor, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>The Thrust of Aritificial Intelligence, Information Hub, Hong Kong University of Science and Technology (Guangzhou)</a>, August 2024 - Now</p>
+<li><p>Assistant Professor, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>The Thrust of Artificial Intelligence, Information Hub, Hong Kong University of Science and Technology (Guangzhou)</a>, August 2024 - Now</p>
 </li>
 <li><p>Postdoctoral Researcher, <a href="https://eecs.berkeley.edu/" target=&ldquo;blank&rdquo;>Department of Electrical Engineering and Computer Science, UC Berkeley</a>, and <a href="https://www.colorado.edu/cs/," target=&ldquo;blank&rdquo;>Department of Computer Science, CU Boulder</a>, 
 October 2023 - July 2024 (Advisor: <a href="https://people.eecs.berkeley.edu/~arcak/?_ga=2.114823623.1910588438.1695734188-1088155217.1659373240" target=&ldquo;blank&rdquo;>Murat Arcak (UC Berkeley)</a> &amp; <a href="https://sites.google.com/site/zamani1362/" target=&ldquo;blank&rdquo;>Majid Zamani (CU Boulder)</a>)</p>
@@ -121,7 +121,7 @@ October 2017 - May 2018 </p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on August 27<sup>th</sup> 2024 . </br>
+Last edited  on September 19<sup>th</sup> 2024 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
