--- a/bingzhuo/Teaching.html
+++ b/bingzhuo/Teaching.html
@@ -41,16 +41,13 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">Bingzhuo Zhong<br /> 钟秉灼<br /> @ HKUST-GZ</div>
+<div class="menu-category">SSS-CPS Lab<br /> @HKUST-GZ</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="index_Chinese.html">中文主页</a></div>
-<div class="menu-item"><a href="./../group.html">Research&nbsp;Group</a></div>
-<div class="menu-item"><a href="./../Projects.html">Research&nbsp;Projects</a></div>
-<div class="menu-item"><a href="./../Publications.html">Publications</a></div>
-<div class="menu-item"><a href="Services.html">Academic&nbsp;Services</a></div>
-<div class="menu-item"><a href="Teaching.html" class="current">Teaching</a></div>
-<div class="menu-item"><a href="Travel.html">Academic&nbsp;Activities</a></div>
-<div class="menu-item"><a href="./../Recruitment.html">Recruitment</a></div>
+<div class="menu-item"><a href="group.html">Members</a></div>
+<div class="menu-item"><a href="Projects.html">Research&nbsp;Projects</a></div>
+<div class="menu-item"><a href="Publications.html">Publications</a></div>
+<div class="menu-item"><a href="Recruitment.html">Recruitment</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
@@ -116,7 +113,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on September 19<sup>th</sup> 2024 . </br>
+Last edited  on December 14<sup>th</sup> 2024 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
