--- a/bingzhuo/index_Chinese.html
+++ b/bingzhuo/index_Chinese.html
@@ -41,84 +41,53 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">Bingzhuo Zhong<br /> 钟秉灼<br /> @ HKUST-GZ</div>
+<div class="menu-category">SSS-CPS Lab<br /> @HKUST-GZ</div>
 <div class="menu-item"><a href="index_Chinese.html">中文主页</a></div>
 <div class="menu-item"><a href="index.html">English&nbsp;Homepage</a></div>
-<div class="menu-item"><a href="./../group.html">课题组</a></div>
-<div class="menu-item"><a href="./../Projects.html">研究项目</a></div>
-<div class="menu-item"><a href="./../Publications.html">发表论文</a></div>
-<div class="menu-item"><a href="Services.html">学术服务</a></div>
-<div class="menu-item"><a href="Teaching.html">教学</a></div>
-<div class="menu-item"><a href="Travel.html">学术活动</a></div>
-<div class="menu-item"><a href="./../Recruitment_C.html">招聘信息</a></div>
+<div class="menu-item"><a href="group.html">成员</a></div>
+<div class="menu-item"><a href="Projects.html">研究项目</a></div>
+<div class="menu-item"><a href="Publications.html">发表论文</a></div>
+<div class="menu-item"><a href="Recruitment_C.html">招聘信息</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
 <div id="layout-content">
+<h2><b>欢迎来到安全与智能信息物理系统实验室!</b></h2>
 <div id="text-img-container"><div id="img-container">
-<img src="./image/CPS_Diagram - Copy.png" alt="profile pic" width="95%" /></div>
+<img src="./image/mainidea.png" alt="profile pic" width="90%" /></div>
 <div id="text-container"></div></div>
+<p>依托香港科技大学（广州）信息枢纽人工智能学域，实验室的愿景是在实践中发展和融合人工智能，控制，机器人学，形式化方法，数据科学以及通信科学等领域的理论，以构建既安全（safe and secure）又智能（smart）的现代信息物理系统。
+实验室的研究方向包括（但不限于）：</p>
+<ol>
+<li><p>构建即安全（secure-by-construction）的人工智能控制器沙箱机制设计</p>
+</li>
+<li><p>计算感知型（computation-aware）和硬件感知型 （hardware-aware）控制器的生成</p>
+</li>
+<li><p>深度神经网络的形式化验证</p>
+</li>
+<li><p>运行时保证（run-time assurance）架构下的在线安全强化学习</p>
+</li>
+<li><p>上述研究成果在自主无人机，无人船等智能系统中的应用</p>
+</li>
+</ol>
+<p><b>请点击<a href="./Recruitment_C.html" target=&ldquo;blank&rdquo;>此处</a>查看2025年秋季学期课题组博士和博士后的招聘信息。</b></p>
+<h2>实验室负责人（Principle Investigator）</h2>
 <div id="text-img-container"><div id="img-container">
-<img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="280px" height="280px" /></div>
-<div id="text-container"><h2><br /></h2>
-<h1>钟秉灼， 理学博士(Dr. rer. nat)<br /></h1>
-<h2>助理教授<br /><br /></h2>
-<p><a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>香港科技大学（广州）</a>信息枢纽人工智能学域</p>
-<p>这是我在<a href="https://scholar.google.com/citations?user=_5kYTtsAAAAJ&amp;hl=en/" target=&ldquo;blank&rdquo;>Google Scholar</a>，<a href="https://www.researchgate.net/profile/Bingzhuo-Zhong/" target=&ldquo;blank&rdquo;>Research Gate</a> 和 <a href="https://www.linkedin.com/in/bingzhuo-zhong-32b94874/" target=&ldquo;blank&rdquo;>LinkedIn</a> 上的个人资料。<br /></p>
-<p>欢迎加入我的课题组。请点击<a href="./../Recruitment_C.html" target=&ldquo;blank&rdquo;>此处</a>查看招聘信息。</p>
+<img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="175px" height="175px" /></div>
+<div id="text-container"><h3><br /></h3>
+<h2>钟秉灼， 理学博士(Dr. rer. nat)<br /><br /></h2>
+<h3><b>助理教授</b>，<a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>香港科技大学（广州）</a><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>信息枢纽</a><a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>人工智能学域</a></h3>
+<h3>办公室: W4(C8) L3 305</h3>
+<h3>邮箱: bingzhuoz(at)hkust-gz(dot)edu(dot)cn<br /></h3>
 </div></div>
-<h2>研究兴趣</h2>
-<ul>
-<li><p>基于沙箱技术的可信人工智能</p>
-</li>
-<li><p>信息物理系统的物理安全(safety)和信息安全(security)</p>
-</li>
-<li><p>随机混杂系统(hybrid systems)的形式化验证与控制器生成</p>
-</li>
-<li><p>数据驱动控制策略设计</p>
-</li>
-<li><p>数字孪生与智能控制工程</p>
-</li>
-<li><p>无人机（集群）控制策略设计
-</p>
-</li>
-</ul>
-<h2>教育经历</h2>
-<ul>
-<li><p><b>计算机科学专业</b>，<b>理学博士</b>(Dr. rer. nat.)(以最高荣誉毕业 (<a href="https://de.wikipedia.org/wiki/Summa_cum_laude" target=&ldquo;blank&rdquo;>summa cum laude</a>))，<a href="https://www.tum.de/" target=&ldquo;blank&rdquo;>德国慕尼黑工业大学</a>，
-2018. 11 - 2023. 07 (导师: <a href="https://rtsl.cps.mw.tum.de/personal_page/mcaccamo/" target=&ldquo;blank&rdquo;>Prof. Dr. Marco Caccamo</a> 和 <a href="https://sites.google.com/site/zamani1362/" target=&ldquo;blank&rdquo;>Prof. Dr. Majid Zamani</a>)<br /></p>
-</li>
-<li><p><b>机械工程专业</b>，<b>工学硕士</b>(M.Sc.)，<a href="https://www.tum.de/" target=&ldquo;blank&rdquo;>德国慕尼黑工业大学</a>, 2016. 10 - 2018. 10</p>
-</li>
-<li><p><b>车辆工程（轨道交通）专业</b>，<b>工学学士</b>，<a href="https://en.tongji.edu.cn/" target=&ldquo;blank&rdquo;>同济大学</a>，2012. 09 - 2016. 07</p>
-</li>
-<li><p>2012年毕业于<a href="http://www.zhxhs.net/" target=&ldquo;blank&rdquo;>广州市执信中学</a></p>
-</li>
-</ul>
-<h2>简历</h2>
-<ul>
-<li><p><b>助理教授</b>，<a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>香港科技大学（广州）信息枢纽人工智能学域</a>，2024. 8 - 至今</p>
-</li>
-<li><p><b>博士后研究员</b>，<a href="https://eecs.berkeley.edu/" target=&ldquo;blank&rdquo;>美国加州大学伯克利分校电气工程与计算机科学系</a>/<a href="https://www.colorado.edu/cs/" target=&ldquo;blank&rdquo;>美国科罗拉多大学博尔德分校(CU Boulder)计算机系</a>，2023. 10 - 2024. 7</p>
-</li>
-<li><p><b>研究员</b>， <a href="https://rtsl.cps.mw.tum.de/" target=&ldquo;blank&rdquo;>产品工程和信息物理系统研究所</a>, <a href="https://www.tum.de/" target=&ldquo;blank&rdquo;>德国慕尼黑工业大学</a>，
-2018. 11 - 2023. 09 </p>
-</li>
-<li><p><b>访问学者</b>，<a href="https://eecs.berkeley.edu/" target=&ldquo;blank&rdquo;>电气工程与计算机科学系</a>, <a href="https://eecs.berkeley.edu/" target=&ldquo;blank&rdquo;>美国加州大学伯克利分校</a>，
-2023.01 - 2023.04 </p>
-</li>
-<li><p><b>研究助理</b>，<a href="https://www.mec.ed.tum.de/en/ais/homepage/" target=&ldquo;blank&rdquo;>自动化与信息系统研究所</a>, <a href="https://www.tum.de/" target=&ldquo;blank&rdquo;>德国慕尼黑工业大学</a>,
-2017.10 - 2018.05 </p>
-</li>
-</ul>
-<h2>联系方式</h2>
-<p>Email:   bingzhuoz(at)hkust-gz(dot)edu(dot)cn<br />
-</p>
+<p><br /><br /></p>
+<a href='https://clustrmaps.com/site/1bp6y'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=OWwiM2MGkCHvj0DPOh_ckKf8Vqbpweq8QTS2bIm3MD8&co=2d78ad&ct=ffffff'/></a>
+<p>since July 2022.</p>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on September 19<sup>th</sup> 2024 . </br>
+Last edited  on December 14<sup>th</sup> 2024 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
