--- a/group.html
+++ b/group.html
@@ -96,6 +96,21 @@ M. Eng. in Computer Science and Technology, Nankai University, China</br>
 西北工业大学控制科学与工程专业工学硕士</br>
 M. Eng. in Control Science and Engineering, Northwestern Poly. University, China</br>
 邮箱（email）: twang560(at)connect*</br>
+<a href="https://wt202020.github.io/" target="blank"> 个人主页（personal webpage)</a>
+</p>
+</div>
+</div>
+<div id="member-container">
+<div id="member">
+<img src="image/member/Xiaoguang.jpg">
+</div>
+<div id="member-text">
+<p>
+<b>霍晓光 Xiaoguang Huo</b></br>
+<b>博士研究生 Ph.D. Student</b></br>
+华东师范大学原子与分子物理专业理学硕士</br>
+M. Sc. in Atomic and Molecular Physics, East China Normal University, China</br>
+邮箱（email）:  xhuo740(at)connect*</br>
 <a href="./group.html" target="blank"> 个人主页（personal webpage)</a>
 </p>
 </div>
@@ -111,7 +126,7 @@ M. Eng. in Control Science and Engineering, Northwestern Poly. University, China
 山东大学运筹学与控制论专业理学硕士</br>
 M. Sc. in Operational Research and Cybernetics, Shandong University, China</br>
 邮箱（email）: phoebeshuoli(at)*</br>
-<a href="./group.html" target="blank"> 个人主页（personal webpage)</a>
+<a href="https://lishuo0417.github.io/" target="blank"> 个人主页（personal webpage)</a>
 </p>
 </div>
 </div>
@@ -130,28 +145,13 @@ Undergraduate student in Information Security, Northwestern Poly. University, Ch
 </p>
 </div>
 </div>
-<div id="member-container">
-<div id="member">
-<img src="image/member/YuanJianyang.jpg">
-</div>
-<div id="member-text">
-<p>
-<b>袁建阳 Jianyang YUAN</b></br>
-<b>研究助理 Research Assistant</b></br>
-新加坡国立大学电气工程专业工学硕士</br>
-M. Sc. in Electrical Engineering, National University of Singapore, Singapore</br>
-邮箱（email）:  e0973860(at)u(dot)nus(dot)edu</br>
-<a href="https://www.junle.fun/" target="blank"> 个人主页（personal webpage)</a>
-</p>
-</div>
-</div>
 </p>
 <p>*hkust-gz.edu.cn</p>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on September 19<sup>th</sup> 2024 . </br>
+Last edited  on December 14<sup>th</sup> 2024 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
