--- a/Recruitment.html
+++ b/Recruitment.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="./image/icon.png">
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-<!--- <title>Ph.D. and Postdoc Recruitment in 2025 (<a href="./Recruitment_C.html" target=&ldquo;blank&rdquo;>中文版本</a>)</title> --->
+<!--- <title>Ph.D. and Postdoc Recruitment (<a href="./Recruitment_C.html" target=&ldquo;blank&rdquo;>中文版本</a>)</title> --->
 <title>欢迎来到香港科技大学（广州）安全与智能信息物理系统实验室！</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
@@ -53,7 +53,7 @@ MathJax.Hub.Config({
 <div id="layout-content-container">
 <div id="layout-content">
 <div id="toptitle">
-<h1>Ph.D. and Postdoc Recruitment in 2025 (<a href="./Recruitment_C.html" target=&ldquo;blank&rdquo;>中文版本</a>)</h1>
+<h1>Ph.D. and Postdoc Recruitment (<a href="./Recruitment_C.html" target=&ldquo;blank&rdquo;>中文版本</a>)</h1>
 </div>
 <h2>Brief Introduction to the Hong Kong University of Science and Technology (Guangzhou)</h2>
 <p>Since its establishment in 1991, the Hong Kong University of Science and Technology (HKUST) has rapidly risen among global universities due to its innovative spirit and progressive philosophy, developing into a research university of international repute. 
@@ -124,7 +124,7 @@ In the research summary, please briefly introduce:</p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on December 14<sup>th</sup> 2024 . </br>
+Last edited  on February 5<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
