--- a/Recruitment_C.html
+++ b/Recruitment_C.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="./image/icon.png">
 <link rel="stylesheet" href="main.css" type="text/css" />
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-<!--- <title>2025年博士/博士后招聘信息 (<a href="./Recruitment.html" target=&ldquo;blank&rdquo;>English Version</a>)</title> --->
+<!--- <title>博士/博士后招聘信息 (<a href="./Recruitment.html" target=&ldquo;blank&rdquo;>English Version</a>)</title> --->
 <title>欢迎来到香港科技大学（广州）安全与智能信息物理系统实验室！</title>
 <!-- MathJax -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
@@ -53,7 +53,7 @@ MathJax.Hub.Config({
 <div id="layout-content-container">
 <div id="layout-content">
 <div id="toptitle">
-<h1>2025年博士/博士后招聘信息 (<a href="./Recruitment.html" target=&ldquo;blank&rdquo;>English Version</a>)</h1>
+<h1>博士/博士后招聘信息 (<a href="./Recruitment.html" target=&ldquo;blank&rdquo;>English Version</a>)</h1>
 </div>
 <h2>香港科技大学（广州）简介</h2>
 <p>香港科技大学（简称港科大）自1991年成立以来，凭借其锐意创新、与时并进的理念，在全球高校中迅速崛起，已经发展为一所在国际上享有盛誉的研究型大学。
@@ -110,7 +110,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on December 14<sup>th</sup> 2024 . </br>
+Last edited  on February 5<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
