--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@ The research directions of the laboratory include (but are not limited to):</p>
 <li><p>Intelligent systems such as autonomous UAV and unmanned vessels.</p>
 </li>
 </ol>
-<p><b>Several Ph.D. and Postdoc positions in our lab are avaialble from Fall 2025. 
-Please check <a href="./Recruitment.html" target=&ldquo;blank&rdquo;>here</a> for details.</b></p>
+<p><b>Please check <a href="./Recruitment.html" target=&ldquo;blank&rdquo;>here</a> if you want to apply for Ph.D. and Postdoc positions in our lab.</b></p>
 <h2>Principle Investigator</h2>
 <div id="text-img-container"><div id="img-container">
 <img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="175px" height="175px" /></div>
@@ -87,7 +86,7 @@ Please check <a href="./Recruitment.html" target=&ldquo;blank&rdquo;>here</a> fo
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on December 14<sup>th</sup> 2024 . </br>
+Last edited  on February 5<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
