--- a/index_Chinese.html
+++ b/index_Chinese.html
@@ -70,7 +70,7 @@ MathJax.Hub.Config({
 <li><p>上述研究成果在自主无人机，无人船等智能系统中的应用</p>
 </li>
 </ol>
-<p><b>请点击<a href="./Recruitment_C.html" target=&ldquo;blank&rdquo;>此处</a>查看2025年秋季学期课题组博士和博士后的招聘信息。</b></p>
+<p><b>请点击<a href="./Recruitment_C.html" target=&ldquo;blank&rdquo;>此处</a>查看课题组博士和博士后的招聘信息。</b></p>
 <h2>实验室负责人（Principle Investigator）</h2>
 <div id="text-img-container"><div id="img-container">
 <img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="175px" height="175px" /></div>
@@ -87,7 +87,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on December 14<sup>th</sup> 2024 . </br>
+Last edited  on February 5<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
