--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ MathJax.Hub.Config({
 <div id="text-img-container"><div id="img-container">
 <img src="./image/mainidea.png" alt="profile pic" width="90%" /></div>
 <div id="text-container"></div></div>
-<p>Supported by the Thrust of Artificial Intelligence at the Hong Kong University of Science and Technology(Guangzhou), the vision of the laboratory is to construct modern Cyber-Physical Systems that are safe, secure, and smart by developing and integrating theories from fields including artificial intelligence, control, robotics, formal methods, data science, and communication science in practice.
+<p>Supported by the Thrust of Artificial Intelligence and the Thrust of Intelligent Transportation at the Hong Kong University of Science and Technology(Guangzhou), the vision of the laboratory is to construct modern Cyber-Physical Systems that are safe, secure, and smart by developing and integrating theories from fields including artificial intelligence, control, robotics, formal methods, data science, and communication science in practice.
 The research directions of the laboratory include (but are not limited to):</p>
 <ol>
 <li><p>Designing secure-by-construction sandbox mechanisms for AI-based controllers.</p>
@@ -86,7 +86,7 @@ The research directions of the laboratory include (but are not limited to):</p>
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on February 5<sup>th</sup> 2025 . </br>
+Last edited  on February 6<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
