--- a/bingzhuo/index.html
+++ b/bingzhuo/index.html
@@ -41,53 +41,90 @@ MathJax.Hub.Config({
 <div id="layout-menu-container">
 <div id="layout-menu">
 <div class="menu-item"><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a></div>
-<div class="menu-category">SSS-CPS Lab<br /> @HKUST-GZ</div>
+<div class="menu-category">Bingzhuo Zhong<br /> 钟秉灼<br /> @ HKUST-GZ</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="index_Chinese.html">中文主页</a></div>
-<div class="menu-item"><a href="group.html">Members</a></div>
-<div class="menu-item"><a href="Projects.html">Research&nbsp;Projects</a></div>
-<div class="menu-item"><a href="Publications.html">Publications</a></div>
-<div class="menu-item"><a href="Recruitment.html">Recruitment</a></div>
+<div class="menu-item"><a href="./../group.html">Research&nbsp;Group</a></div>
+<div class="menu-item"><a href="./../Projects.html">Research&nbsp;Projects</a></div>
+<div class="menu-item"><a href="./../Publications.html">Publications</a></div>
+<div class="menu-item"><a href="Services.html">Academic&nbsp;Services</a></div>
+<div class="menu-item"><a href="Teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="Travel.html">Academic&nbsp;Activities</a></div>
+<div class="menu-item"><a href="./../Recruitment.html">Recruitment</a></div>
 </div> <!-- <div id="layout-menu"> -->
 </div> <!-- <div id="layout-menu-container"> -->
 <div id="layout-content-container">
 <div id="layout-content">
-<h2><b>Welcome to the Laboratory for Safe, Secure, and Smart Cyber-Physical Systems!</b></h2>
 <div id="text-img-container"><div id="img-container">
-<img src="./image/mainidea.png" alt="profile pic" width="90%" /></div>
+<img src="./image/CPS_Diagram - Copy.png" alt="profile pic" width="95%" /></div>
 <div id="text-container"></div></div>
-<p>Supported by the Thrust of Artificial Intelligence at the Hong Kong University of Science and Technology(Guangzhou), the vision of the laboratory is to construct modern Cyber-Physical Systems that are safe, secure, and smart by developing and integrating theories from fields including artificial intelligence, control, robotics, formal methods, data science, and communication science in practice.
-The research directions of the laboratory include (but are not limited to):</p>
-<ol>
-<li><p>Designing secure-by-construction sandbox mechanisms for AI-based controllers.</p>
-</li>
-<li><p>Synthesis of computation-aware and hardware-aware controllers.</p>
-</li>
-<li><p>Formal verification of deep neural networks.</p>
-</li>
-<li><p>Online safe reinforcement learning under run-time assurance architectures.</p>
-</li>
-<li><p>Intelligent systems such as autonomous UAV and unmanned vessels.</p>
-</li>
-</ol>
-<p><b>Several Ph.D. and Postdoc positions in our lab are avaialble from Fall 2025. 
-Please check <a href="./Recruitment.html" target=&ldquo;blank&rdquo;>here</a> for details.</b></p>
-<h2>Principle Investigator</h2>
 <div id="text-img-container"><div id="img-container">
-<img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="175px" height="175px" /></div>
-<div id="text-container"><h2>Bingzhuo Zhong, Dr. rer. nat. (钟秉灼)<br /><br /></h2>
-<h3><b>Assistant Professor</b> at the <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>Thrust of Artificial Intelligence</a>, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/" target=&ldquo;blank&rdquo;>Information Hub</a>, <a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a></h3>
-<h3>Office: W4(C8) L3 305</h3>
-<h3>Email: bingzhuoz(at)hkust-gz(dot)edu(dot)cn<br /></h3>
+<img src="./image/bingzhuo.jpg" alt="Bingzhuo Zhong" width="280px" height="280px" /></div>
+<div id="text-container"><h1><br /></h1>
+<h1>Bingzhuo Zhong, Dr. rer. nat. (钟秉灼)<br /></h1>
+<h2>Assistant Professor <br /><br /></h2>
+<p>The Thrust of Artificial Intelligence, Information Hub, <a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a><br />
+the Thrust of Intelligent Transportation, System Hub, <a href="https://www.hkust-gz.edu.cn/" target=&ldquo;blank&rdquo;>Hong Kong University of Science and Technology (Guangzhou)</a></p>
+<p>Here are my profiles on <a href="https://scholar.google.com/citations?user=_5kYTtsAAAAJ&amp;hl=en/" target=&ldquo;blank&rdquo;>Google Scholar</a>, <a href="https://www.researchgate.net/profile/Bingzhuo-Zhong/" target=&ldquo;blank&rdquo;>Research Gate</a>, and <a href="https://www.linkedin.com/in/bingzhuo-zhong-32b94874/" target=&ldquo;blank&rdquo;>LinkedIn</a>.<br /></p>
 </div></div>
-<p><br /><br /></p>
-<a href='https://clustrmaps.com/site/1bp6y'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=OWwiM2MGkCHvj0DPOh_ckKf8Vqbpweq8QTS2bIm3MD8&co=2d78ad&ct=ffffff'/></a>
-<p>since July 2022.</p>
+<p>Please check <a href="./../Recruitment.html" target=&ldquo;blank&rdquo;>here</a> for details of recruitment.</p>
+<h2>Research Interest</h2>
+<ul>
+<li><p>Sandboxing controllers for trustworthy artificial intelligence</p>
+</li>
+<li><p>Safety and security of Cyber-Physical Systems</p>
+</li>
+<li><p>Formal verification and synthesis of (stochastic) hybrid systems</p>
+</li>
+<li><p>Data-driven control</p>
+</li>
+<li><p>Digital twin and smart control engineering</p>
+</li>
+<li><p>Unmanned aerial vehicle (UAV)
+</p>
+</li>
+</ul>
+<h2>Education</h2>
+<ul>
+<li><p>Dr. rer. nat. in Computer Science (<a href="https://de.wikipedia.org/wiki/Summa_cum_laude" target=&ldquo;blank&rdquo;>Summa cum laude</a>), <a href="https://www.tum.de/" target=&ldquo;blank&rdquo;>Technical University of Munich</a>, Germany,
+November 2018 - July 2023 (Advisors: <a href="https://rtsl.cps.mw.tum.de/personal_page/mcaccamo/" target=&ldquo;blank&rdquo;>Prof. Dr. Marco Caccamo</a> and <a href="https://sites.google.com/site/zamani1362/" target=&ldquo;blank&rdquo;>Prof. Dr. Majid Zamani</a>)<br /></p>
+</li>
+<li><p>M.Sc. in Mechanical Engineering, <a href="https://www.tum.de/" target=&ldquo;blank&rdquo;>Technical University of Munich</a>, Germany,
+October 2016 - October 2018</p>
+</li>
+<li><p>B.E. in Vehicle Engineering,
+<a href="https://en.tongji.edu.cn/" target=&ldquo;blank&rdquo;>Tongji University</a>, China, September 2012 - July 2016</p>
+</li>
+<li><p>Graduated from <a href="http://www.zhxhs.net/" target=&ldquo;blank&rdquo;>Zhixin High School</a>, Guangzhou, China, in 2012</p>
+</li>
+</ul>
+<h2>Biography</h2>
+<ul>
+<li><p>Assistant Professor, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>The Thrust of Artificial Intelligence, Information Hub, Hong Kong University of Science and Technology (Guangzhou)</a>, August 2024 - Now</p>
+</li>
+<li><p>Assistant Professor, <a href="https://www.hkust-gz.edu.cn/academics/hubs-and-thrust-areas/information-hub/artificial-intelligence/" target=&ldquo;blank&rdquo;>The Thrust of Intelligent Transportation, System Hub, Hong Kong University of Science and Technology (Guangzhou)</a>, December 2024 - Now</p>
+</li>
+<li><p>Postdoctoral Researcher, <a href="https://eecs.berkeley.edu/" target=&ldquo;blank&rdquo;>Department of Electrical Engineering and Computer Science, UC Berkeley</a>, and <a href="https://www.colorado.edu/cs/," target=&ldquo;blank&rdquo;>Department of Computer Science, CU Boulder</a>, 
+October 2023 - July 2024 (Advisor: <a href="https://people.eecs.berkeley.edu/~arcak/?_ga=2.114823623.1910588438.1695734188-1088155217.1659373240" target=&ldquo;blank&rdquo;>Murat Arcak (UC Berkeley)</a> &amp; <a href="https://sites.google.com/site/zamani1362/" target=&ldquo;blank&rdquo;>Majid Zamani (CU Boulder)</a>)</p>
+</li>
+<li><p>Research Associate, <a href="https://rtsl.cps.mw.tum.de/" target=&ldquo;blank&rdquo;>Chair of Cyber-Physical Systems in Production Engineering</a>, <a href="https://www.tum.de/" target=&ldquo;blank&rdquo;>Technical University of Munich</a>,
+November 2018 - September 2023 </p>
+</li>
+<li><p>Visiting Researcher, <a href="https://eecs.berkeley.edu/" target=&ldquo;blank&rdquo;>Department of Electrical Engineering and Computer Science</a>, <a href="https://eecs.berkeley.edu/" target=&ldquo;blank&rdquo;>University of California, Berkeley</a>,
+January 2023 - April 2023 </p>
+</li>
+<li><p>Research Assistant, <a href="https://www.mec.ed.tum.de/en/ais/homepage/" target=&ldquo;blank&rdquo;>Chair of Automation and Information Systems</a>, <a href="https://www.tum.de/" target=&ldquo;blank&rdquo;>Technical University of Munich</a>,
+October 2017 - May 2018 </p>
+</li>
+</ul>
+<h2>Contact</h2>
+<p>Email:   bingzhuoz(at)hkust-gz(dot)edu(dot)cn<br />
+</p>
 </div> <!-- <div id="layout-content"> -->
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on December 14<sup>th</sup> 2024 . </br>
+Last edited  on February 6<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
