--- a/index_Chinese.html
+++ b/index_Chinese.html
@@ -56,7 +56,7 @@ MathJax.Hub.Config({
 <div id="text-img-container"><div id="img-container">
 <img src="./image/mainidea.png" alt="profile pic" width="90%" /></div>
 <div id="text-container"></div></div>
-<p>依托香港科技大学（广州）信息枢纽人工智能学域，实验室的愿景是在实践中发展和融合人工智能，控制，机器人学，形式化方法，数据科学以及通信科学等领域的理论，以构建既安全（safe and secure）又智能（smart）的现代信息物理系统。
+<p>依托香港科技大学（广州）信息枢纽人工智能学域和系统枢纽智能交通学域，实验室的愿景是在实践中发展和融合人工智能，控制，机器人学，形式化方法，数据科学以及通信科学等领域的理论，以构建既安全（safe and secure）又智能（smart）的现代信息物理系统。
 实验室的研究方向包括（但不限于）：</p>
 <ol>
 <li><p>构建即安全（secure-by-construction）的人工智能控制器沙箱机制设计</p>
@@ -87,7 +87,7 @@ MathJax.Hub.Config({
 <div id="footer-container">
 <div id="footer">
 <div id="footer-text">
-Last edited  on February 5<sup>th</sup> 2025 . </br>
+Last edited  on February 6<sup>th</sup> 2025 . </br>
 Powered by <a href="https://github.com/szl2/jemdoc-new-design" target="blank">jemdoc + new design</a>.
 </div> <!-- <div id="footer-text"> -->
 </div> <!-- <div id="footer"> -->
